--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^7.14.2",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1"
