--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "firebase": "^7.14.2",
+    "framer-motion": "^1.10.3",
     "next": "9.3.6",
     "react": "16.13.1",
+    "react-div-100vh": "^0.3.8",
     "react-dom": "16.13.1"
   }
 }
