--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "firebase": "^7.14.2",
     "framer-motion": "^1.10.3",
+    "moment": "^2.25.3",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-div-100vh": "^0.3.8",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-lazy-load-image-component": "^1.4.3"
   }
 }
