--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^1.10.3",
     "moment": "^2.25.3",
     "next": "9.3.6",
+    "node-fetch": "^2.6.0",
     "react": "16.13.1",
     "react-div-100vh": "^0.3.8",
     "react-dom": "16.13.1",
