--- a/package.json
+++ b/package.json
@@ -8,16 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "body-scroll-lock": "^3.0.2",
     "firebase": "^7.14.2",
-    "framer-motion": "^1.10.3",
-    "moment": "^2.25.3",
     "next": "9.3.6",
     "node-fetch": "^2.6.0",
     "react": "16.13.1",
-    "react-div-100vh": "^0.3.8",
     "react-dom": "16.13.1",
-    "react-lazy-load-image-component": "^1.4.3",
-    "react-multi-carousel": "^2.5.5"
+    "react-lazy-load-image-component": "^1.4.3"
   }
 }
