--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-lazy-load-image-component": "^1.4.3",
+    "react-multi-carousel": "^2.5.5",
     "react-scrollmagic": "^2.2.0"
   }
 }
