--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-lazy-load-image-component": "^1.4.3",
     "react-morphing-modal": "^0.2.2",
     "react-multi-carousel": "^2.5.5",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "react-switch-selector": "^1.1.2"
   }
 }
